Fix for hidden entries list on Firefox

--- a/frontend/less/default.less
+++ b/frontend/less/default.less
@@ -112,10 +112,7 @@ html {
             height: 100%;
             width: 100%;
             margin-bottom: 0;
-
-            display: block;
             overflow: auto;
-
             tr {
                 cursor: hand;
                 cursor: pointer;
